--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,3 +1,25 @@
-div {
-  background: lightpink;
+$gray: lighten(gray, 40%);
+
+.timer {
+  border: 1px $gray solid;
+  border-radius: 10%;
+  border-width: 2px;
+  width: 12em;
+  height: 10em;
+  margin: 1em;
+  & > * {
+    margin: 1em;
+  }
+}
+
+.form {
+  border: 2px solid $gray;
+  border-radius: 5px;
+  width: 70%;
+  padding: 5px;
+}
+
+button {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
